--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,23 @@ cmake-build-debug/CMakeFiles/TestClassification.dir/StatisticalTest/PairedTest.c
 cmake-build-debug/CMakeFiles/TestClassification.dir/StatisticalTest/Sign.cpp.o
 cmake-build-debug/CMakeFiles/TestClassification.dir/StatisticalTest/StatisticalTestNotApplicable.cpp.o
 cmake-build-debug/CMakeFiles/TestClassification.dir/StatisticalTest/StatisticalTestResult.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/Bagging.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/C45.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/C45Stump.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/DiscreteFeaturesNotAllowed.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/RandomForest.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Classifier/Svm.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Model/TreeEnsembleModel.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Model/DecisionTree/DecisionCondition.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Model/DecisionTree/DecisionNode.cpp.o
+cmake-build-debug/CMakeFiles/Classification.dir/Model/DecisionTree/DecisionTree.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/Bagging.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/C45.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/C45Stump.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/DiscreteFeaturesNotAllowed.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/RandomForest.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Classifier/Svm.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Model/TreeEnsembleModel.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionCondition.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionNode.cpp.o
+cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionTree.cpp.o
