Added ignored files.

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,12 @@ cmake-build-debug/CMakeFiles/TestClassification.dir/Model/TreeEnsembleModel.cpp.
 cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionCondition.cpp.o
 cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionNode.cpp.o
 cmake-build-debug/CMakeFiles/TestClassification.dir/Model/DecisionTree/DecisionTree.cpp.o
+cmake-build-debug/CMakeFiles/3.13.2/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.13.2/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.13.2/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.13.2/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.13.2/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.13.2/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.13.2/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.13.2/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.13.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
