--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,37 @@ cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/a.out
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/CMakeCCompilerId.c
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/a.out
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/3.16.5/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.16.5/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.16.5/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.16.5/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.16.5/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/CMakeCXXCompilerId.cpp
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/Makefile
+cmake-build-debug/model.txt
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/clion-log.txt
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+cmake-build-debug/CMakeFiles/CMakeOutput.log
+cmake-build-debug/CMakeFiles/Makefile.cmake
+cmake-build-debug/CMakeFiles/Makefile2
+cmake-build-debug/CMakeFiles/progress.marks
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/CMakeFiles/3.17.3/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.17.3/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.17.3/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
