--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,5 @@ cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/a.out
 cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/CMakeCCompilerId.c
 cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/a.out
 cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/Progress/
+/cmake-build-debug/CMakeFiles/Test.dir/
