Added more tests.

--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,4 @@ cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/a.out
 cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
 /cmake-build-debug/CMakeFiles/Progress/
 /cmake-build-debug/CMakeFiles/Test.dir/
+/cmake-build-debug/Test
