--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,21 @@ cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
 /cmake-build-debug/CMakeFiles/Progress/
 /cmake-build-debug/CMakeFiles/Test.dir/
 /cmake-build-debug/Test
+cmake-build-debug/CMakeFiles/3.17.5/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.5/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.5/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.17.5/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.17.5/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.17.5/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.17.5/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.17.5/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/3.17.5/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.19.2/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.19.2/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.19.2/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/a.out
