Updated CMakeLists.txt files and conanfile.py file for Conan 2.0 compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,41 @@ cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/a.out
 /cmake-build-debug/conanbuildinfo.txt
 /cmake-build-debug/conaninfo.txt
 /cmake-build-debug/graph_info.json
+/cmake-build-debug/conan/build/Debug/generators/cmakedeps_macros.cmake
+/cmake-build-debug/conan/build/Debug/generators/CMakePresets.json
+/src/CMakeUserPresets.json
+/cmake-build-debug/conan_host_profile
+/conan_provider.cmake
+/cmake-build-debug/conan/build/Debug/generators/conan_toolchain.cmake
+/cmake-build-debug/conan/build/Debug/generators/conanbuild.sh
+/cmake-build-debug/conan/build/Debug/generators/conanbuildenv-debug-x86_64.sh
+/cmake-build-debug/conan/build/Debug/generators/conandeps_legacy.cmake
+/cmake-build-debug/conan/build/Debug/generators/conanrun.sh
+/cmake-build-debug/conan/build/Debug/generators/conanrunenv-debug-x86_64.sh
+/cmake-build-debug/conan/build/Debug/generators/data_structure-config.cmake
+/cmake-build-debug/conan/build/Debug/generators/data_structure-config-version.cmake
+/cmake-build-debug/conan/build/Debug/generators/data_structure-debug-x86_64-data.cmake
+/cmake-build-debug/conan/build/Debug/generators/data_structure-Target-debug.cmake
+/cmake-build-debug/conan/build/Debug/generators/data_structureTargets.cmake
+/cmake-build-debug/conan/build/Debug/generators/deactivate_conanbuild.sh
+/cmake-build-debug/conan/build/Debug/generators/deactivate_conanrun.sh
+/cmake-build-debug/conan/build/Debug/generators/dictionary-config.cmake
+/cmake-build-debug/conan/build/Debug/generators/dictionary-config-version.cmake
+/cmake-build-debug/conan/build/Debug/generators/dictionary-debug-x86_64-data.cmake
+/cmake-build-debug/conan/build/Debug/generators/dictionary-Target-debug.cmake
+/cmake-build-debug/conan/build/Debug/generators/dictionaryTargets.cmake
+/cmake-build-debug/conan/build/Debug/generators/math-config.cmake
+/cmake-build-debug/conan/build/Debug/generators/math-config-version.cmake
+/cmake-build-debug/conan/build/Debug/generators/math-debug-x86_64-data.cmake
+/cmake-build-debug/conan/build/Debug/generators/math-Target-debug.cmake
+/cmake-build-debug/conan/build/Debug/generators/mathTargets.cmake
+/cmake-build-debug/conan/build/Debug/generators/sampling-config.cmake
+/cmake-build-debug/conan/build/Debug/generators/sampling-config-version.cmake
+/cmake-build-debug/conan/build/Debug/generators/sampling-debug-x86_64-data.cmake
+/cmake-build-debug/conan/build/Debug/generators/sampling-Target-debug.cmake
+/cmake-build-debug/conan/build/Debug/generators/samplingTargets.cmake
+/cmake-build-debug/conan/build/Debug/generators/util-config.cmake
+/cmake-build-debug/conan/build/Debug/generators/util-config-version.cmake
+/cmake-build-debug/conan/build/Debug/generators/util-debug-x86_64-data.cmake
+/cmake-build-debug/conan/build/Debug/generators/util-Target-debug.cmake
+/cmake-build-debug/conan/build/Debug/generators/utilTargets.cmake
